--- a/abproject/hypothesis_testing.ipynb
+++ b/abproject/hypothesis_testing.ipynb
@@ -509,6 +509,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mann Whitney U test for Adelie and Chinstrap species:\n",
+      "Statistic: 2691.5, p-value: 6.851376281411792e-08\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# interpretation - select the Adelie species from the categorical data and select only flipper length from the numerical data \n",
+    "group11 = df_num[df_cat['species'] == 'Adelie']['flipper_length_mm']\n",
+    "# print(group11.shape)\n",
+    "\n",
+    "group12 = df_num[df_cat['species'] == 'Chinstrap']['flipper_length_mm']\n",
+    "# print(group12.shape)\n",
+    "\n",
+    "# apply man whitneyu test to the two groups\n",
+    "stat, p = mannwhitneyu(group11, group12)\n",
+    "\n",
+    "# print statistics and p-values\n",
+    "print(f'Mann Whitney U test for Adelie and Chinstrap species:\\nStatistic: {stat}, p-value: {p}\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(146,)\n",
+      "0      181.0\n",
+      "1      186.0\n",
+      "2      195.0\n",
+      "4      193.0\n",
+      "5      190.0\n",
+      "       ...  \n",
+      "215    207.0\n",
+      "216    202.0\n",
+      "217    193.0\n",
+      "218    210.0\n",
+      "219    198.0\n",
+      "Name: flipper_length_mm, Length: 214, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "grroup13 = df_clean[df_clean['species'] == 'Adelie']['flipper_length_mm']\n",
+    "print(grroup13.shape)\n",
+    "\n",
+    "gex = df_clean[(df_clean['species']).isin(['Adelie', 'Chinstrap'])]['flipper_length_mm']\n",
+    "print(gex)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -873,11 +936,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z-test for Adelie and Chinstrap species:\n",
+      "Statistic: -5.797900789295094, p-value: 6.715015542284308e-09\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# try z test for fun\n"
+    "# conduct z-test for numerical data\n",
+    "from statsmodels.stats.weightstats import ztest\n",
+    "\n",
+    "group11 = df_num[df_cat['species'] == 'Adelie']['flipper_length_mm']\n",
+    "# print(group11.shape)\n",
+    "\n",
+    "group12 = df_num[df_cat['species'] == 'Chinstrap']['flipper_length_mm']\n",
+    "# print(group12.shape)\n",
+    "\n",
+    "# apply man whitneyu test to the two groups\n",
+    "stat, p = ztest(group11, group12)\n",
+    "\n",
+    "# print statistics and p-values\n",
+    "print(f'z-test for Adelie and Chinstrap species:\\nStatistic: {stat}, p-value: {p}\\n')"
    ]
   }
  ],
