new updates to the code

--- a/abproject/hypothesis_testing.ipynb
+++ b/abproject/hypothesis_testing.ipynb
@@ -479,8 +479,8 @@
     "# Mann Whitney U test for numerical data\n",
     "from scipy.stats import mannwhitneyu\n",
     "\n",
-    "# Null Hypothesis: The three groups have the same distribution.\n",
-    "# Alternative Hypothesis: The three groups have different distributions.\n",
+    "# Null Hypothesis: The two groups have the same distribution.\n",
+    "# Alternative Hypothesis: The two groups have different distributions.\n",
     "# if p-value < 0.05, reject the null hypothesis and conclude that the three groups have different distributions.\n",
     "# if p-value > 0.05, fail to reject the null hypothesis and conclude that the three groups have the same distribution.\n",
     "# since the p-value is less than 0.05, we can conclude that the two groups have different distributions.\n",
