--- a/abproject/ab_data_evaluation.ipynb
+++ b/abproject/ab_data_evaluation.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# impor libraries for the project\n",
+    "# import libraries for the project\n",
     "import numpy as np                       \n",
     "import pandas as pd                                  \n",
     "import matplotlib.pyplot as plt\n",
