--- a/abproject/multiple_variable_testing.ipynb
+++ b/abproject/multiple_variable_testing.ipynb
@@ -160,6 +160,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "species              0.000000\n",
+       "island               0.000000\n",
+       "bill_length_mm       0.005814\n",
+       "bill_depth_mm        0.005814\n",
+       "flipper_length_mm    0.005814\n",
+       "body_mass_g          0.005814\n",
+       "sex                  0.031977\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check for missing values\n",
+    "dataset.isnull().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
